--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,3 +1,5 @@
+# docker run --rm -d -p 10000:8888 -e JUPYTER_ENABLE_LAB=yes -v "$PWD":/home/zaturrby/jupyter jupyter/datascience-notebook
+
 FROM jupyter/datascience-notebook
 
-CMD docker run --rm -p 10000:8888 -e JUPYTER_ENABLE_LAB=yes -v "$PWD":/home/zaturrby/jupyter jupyter/datascience-notebook
+CMD docker run --rm -p 10000:8888 -e JUPYTER_ENABLE_LAB=yes -v "$PWD":/home/zaturrby/jupyter .
