--- a/vncserver/Dockerfile
+++ b/vncserver/Dockerfile
@@ -1,3 +1,6 @@
+# https://hub.docker.com/r/consol/ubuntu-xfce-vnc/
+# docker run -d -p 5901:5901 -p 6901:6901 VNC_RESOLUTION=1366x1024 consol/ubuntu-xfce-vnc
+
 FROM consol/ubuntu-xfce-vnc
 
-CMD docker run -d -p 5901:5901 -p 6901:6901 consol/centos-xfce-vnc
+CMD docker run -d -p 5901:5901 -p 6901:6901 .
